tests/expectations/parser/functions/public_const_param_fail.out
Error [EPAR0370047]: expected parameter name
    --> test:4:21
     |
   4 | fn x(x: u32, public const y: i32) {
     |                     ^^^^^
Error [EPAR0370047]: expected parameter name
    --> test:8:19
     |
   8 | final fn x(public constant x: u32, y: i32) {
     |                   ^^^^^^^^
